Make will-change: opacity induce an effect node.

When we specify will-change: opacity, it is a hint to the browser that
opacity will change. In order to make this perform well, we should
induce an effect node so that we don't have to repaint when the
opacity actually changes. This patch makes it so.

R=pdr@chromium.org, wangxianzhu@chromium.org

Bug: 886389
Cq-Include-Trybots: luci.chromium.try:linux_layout_tests_slimming_paint_v2;master.tryserver.blink:linux_trusty_blink_rel
Change-Id: If0979d48f322564d61ad8434eb4435fc8e8f2602
Reviewed-on: https://chromium-review.googlesource.com/1240993
Commit-Queue: vmpstr <vmpstr@chromium.org>
Reviewed-by: Xianzhu Wang <wangxianzhu@chromium.org>
Reviewed-by: Philip Rogers <pdr@chromium.org>
Cr-Commit-Position: refs/heads/master@{#594115}
Former-commit-id: 63b7568b3e04002249f085d4407f00d16fc20dbe